--- a/WebExtension/data/options/index.html
+++ b/WebExtension/data/options/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>YouTube™ No Buffer Options</title>
+  <title>Options Page :: YouTube™ No Buffer</title>
   <style>
+    body {
+      min-width: 500px;
+    }
     .notes {
       font-size: 80%;
     }
   </style>
+  <meta charset="utf-8">
 </head>
 
 <body>
@@ -22,12 +26,14 @@
     <br>
     2: If this option is checked and [1] is checked too, YouTube player gets paused when tab is hidden and it gets resumed when tab is active again.
   </p>
-  <div>
+  <div id="explore"></div>
+  <p>
     <button id="support">Support Development</button>
     <button id="reset">Reset</button> - <button id="save">Save</button>
     <span id="status"></span>
-  </div>
+  </p>
 
   <script src="index.js"></script>
+  <script async src="matched.js"></script>
 </body>
 </html>
